# ImageProc

./: .gitignore  readme.md
app/: build.gradle  proguard-rules.pro
app/gradle/wrapper/: gradle-wrapper.properties
app/src/androidTest/java/com/software/corvidae/imageproc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/software/corvidae/imageproc/: AutoFitTextureView.java  CameraActivity.java
app/src/main/jni/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h
app/src/main/res/layout/: camera_layout.xml
app/src/main/res/values/: colors.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
